--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "html-react-parser": "^2.0.0",
     "next": "12.1.6",
     "next-auth": "^4.6.1",
     "react": "18.2.0",
